[package]
name = "idk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
phf = { version = "0.10", features = [ "macros" ]}
termion = "2.0"
rustyline = "9.0"
rustc-hash = "1.1"
syn = { version = "^1.0", features=["full"]}
quote = "^1.0"
fasthash = "0.4.0"
string-interner = "0.14.0"
